Final_Project_Group5.cydsn/BUILD.log
--------------- Build Started: 05/27/2020 22:00:09 Project: Final_Project_Group5, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:275:56: error: expected expression before ',' token
                 EEPROM_writePage((DATA_AD), (uint8_t*) , MAX_BYTE_PAGE);
                                                        ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/27/2020 22:00:09 ---------------
